{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 66,
  "lineage": "1f0360ec-a83a-ef3b-1904-f9a3fb293a21",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "dfltrtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:495599754512:route-table/rtb-0e7dbb199d34fb7c1",
            "default_route_table_id": "rtb-0e7dbb199d34fb7c1",
            "id": "rtb-0e7dbb199d34fb7c1",
            "owner_id": "495599754512",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0f1e197f8a9012df2",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dfltrtb"
            },
            "tags_all": {
              "Name": "dfltrtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-000fd9ffd3a84aa02"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.mihai-eip",
            "aws_internet_gateway.mihai-igw",
            "aws_nat_gateway.mihai-nat-gw",
            "aws_subnet.mihai-public-subnet",
            "aws_vpc.mihai-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "mihai-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e3ff6bfafb01a26b",
            "association_id": "eipassoc-0ed6aebee6d39b866",
            "domain": "vpc",
            "id": "eipalloc-0e3ff6bfafb01a26b",
            "network_border_group": "eu-west-3",
            "network_interface": "eni-0a695c9503f2e7cd4",
            "private_dns": "ip-10-0-1-92.eu-west-3.compute.internal",
            "private_ip": "10.0.1.92",
            "public_dns": "ec2-15-236-173-165.eu-west-3.compute.amazonaws.com",
            "public_ip": "15.236.173.165",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01eb696891a3b3bcf",
            "arn": "arn:aws:ec2:eu-west-3:495599754512:instance/i-04ed069c0f15c9bb9",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04ed069c0f15c9bb9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mihai-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-08a3d36acca4087a9",
            "private_dns": "ip-10-0-3-58.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.58",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-08d7b9e42d9fd5573",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-019045bd29328506e",
            "tags": {
              "Name": "DB Server"
            },
            "tags_all": {
              "Name": "DB Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0bb75dc2411196357"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_tls_db",
            "aws_subnet.mihai-private-subnet",
            "aws_vpc.mihai-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01eb696891a3b3bcf",
            "arn": "arn:aws:ec2:eu-west-3:495599754512:instance/i-0921a9d9364df1dfa",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0921a9d9364df1dfa",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mihai-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-06408b0c4c69d42cf",
            "private_dns": "ip-10-0-1-11.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.11",
            "public_ip": "51.44.25.141",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-03f89776193d47331",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08989942319869769",
            "tags": {
              "Name": "WebServer"
            },
            "tags_all": {
              "Name": "WebServer"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02c58be2d5ebf2e31"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_tls",
            "aws_subnet.mihai-public-subnet",
            "aws_vpc.mihai-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01eb696891a3b3bcf",
            "arn": "arn:aws:ec2:eu-west-3:495599754512:instance/i-068cb54013e64acc1",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-068cb54013e64acc1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mihai-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a813240e00295bad",
            "private_dns": "ip-10-0-2-193.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.193",
            "public_ip": "13.36.194.168",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0c011b73f4bdbb94f",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f025732e68c0b052",
            "tags": {
              "Name": "WebServer"
            },
            "tags_all": {
              "Name": "WebServer"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02c58be2d5ebf2e31"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_tls",
            "aws_subnet.mihai-public-subnet",
            "aws_vpc.mihai-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "mihai-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:495599754512:internet-gateway/igw-0bf408ca6dcbe8d92",
            "id": "igw-0bf408ca6dcbe8d92",
            "owner_id": "495599754512",
            "tags": {
              "Name": "mihai-igw"
            },
            "tags_all": {
              "Name": "mihai-igw"
            },
            "vpc_id": "vpc-000fd9ffd3a84aa02"
          },
          "dependencies": [
            "aws_vpc.mihai-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "mihai-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:495599754512:loadbalancer/app/mihai-alb/14a1e22897e342f1",
            "arn_suffix": "app/mihai-alb/14a1e22897e342f1",
            "desync_mitigation_mode": "defensive",
            "dns_name": "mihai-alb-2120039538.eu-west-3.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-3:495599754512:loadbalancer/app/mihai-alb/14a1e22897e342f1",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "mihai-alb",
            "security_groups": [
              "sg-02c58be2d5ebf2e31"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-08989942319869769"
              },
              {
                "subnet_id": "subnet-0f025732e68c0b052"
              }
            ],
            "subnets": [
              "subnet-08989942319869769",
              "subnet-0f025732e68c0b052"
            ],
            "tags": {
              "Environment": "test"
            },
            "tags_all": {
              "Environment": "test"
            },
            "vpc_id": "vpc-000fd9ffd3a84aa02",
            "zone_id": "Z3Q77PNBQS71R4"
          },
          "dependencies": [
            "aws_security_group.allow_tls",
            "aws_subnet.mihai-public-subnet",
            "aws_vpc.mihai-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "albl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:495599754512:listener/app/mihai-alb/14a1e22897e342f1/26061c36c391538d",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:495599754512:targetgroup/mihai-alb-tg/6cfeff51f08c657a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:495599754512:listener/app/mihai-alb/14a1e22897e342f1/26061c36c391538d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-3:495599754512:loadbalancer/app/mihai-alb/14a1e22897e342f1",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.mihai-alb",
            "aws_lb_target_group.mihai-alb-tg",
            "aws_security_group.allow_tls",
            "aws_subnet.mihai-public-subnet",
            "aws_vpc.mihai-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "mihai-alb-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:495599754512:targetgroup/mihai-alb-tg/6cfeff51f08c657a",
            "arn_suffix": "targetgroup/mihai-alb-tg/6cfeff51f08c657a",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 10
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:495599754512:targetgroup/mihai-alb-tg/6cfeff51f08c657a",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "mihai-alb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-000fd9ffd3a84aa02"
          },
          "dependencies": [
            "aws_vpc.mihai-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-3:495599754512:targetgroup/mihai-alb-tg/6cfeff51f08c657a-20241115164312961700000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:495599754512:targetgroup/mihai-alb-tg/6cfeff51f08c657a",
            "target_id": "i-0921a9d9364df1dfa"
          },
          "dependencies": [
            "aws_instance.web",
            "aws_lb_target_group.mihai-alb-tg",
            "aws_security_group.allow_tls",
            "aws_subnet.mihai-public-subnet",
            "aws_vpc.mihai-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-3:495599754512:targetgroup/mihai-alb-tg/6cfeff51f08c657a-20241115164454667500000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:495599754512:targetgroup/mihai-alb-tg/6cfeff51f08c657a",
            "target_id": "i-068cb54013e64acc1"
          },
          "dependencies": [
            "aws_instance.web",
            "aws_lb_target_group.mihai-alb-tg",
            "aws_security_group.allow_tls",
            "aws_subnet.mihai-public-subnet",
            "aws_vpc.mihai-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "mihai-nat-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e3ff6bfafb01a26b",
            "connectivity_type": "public",
            "id": "nat-0f1e197f8a9012df2",
            "network_interface_id": "eni-0a695c9503f2e7cd4",
            "private_ip": "10.0.1.92",
            "public_ip": "15.236.173.165",
            "subnet_id": "subnet-08989942319869769",
            "tags": {
              "Name": "gw NAT"
            },
            "tags_all": {
              "Name": "gw NAT"
            }
          },
          "dependencies": [
            "aws_eip.mihai-eip",
            "aws_internet_gateway.mihai-igw",
            "aws_subnet.mihai-public-subnet",
            "aws_vpc.mihai-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "mihai-public-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:495599754512:route-table/rtb-0011c27e2776f640c",
            "id": "rtb-0011c27e2776f640c",
            "owner_id": "495599754512",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bf408ca6dcbe8d92",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Mihai-Public-RTB"
            },
            "tags_all": {
              "Name": "Mihai-Public-RTB"
            },
            "timeouts": null,
            "vpc_id": "vpc-000fd9ffd3a84aa02"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.mihai-igw",
            "aws_vpc.mihai-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03d7e19363646142b",
            "route_table_id": "rtb-0011c27e2776f640c",
            "subnet_id": "subnet-08989942319869769"
          },
          "dependencies": [
            "aws_internet_gateway.mihai-igw",
            "aws_route_table.mihai-public-rtb",
            "aws_subnet.mihai-public-subnet",
            "aws_vpc.mihai-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bdc45cc438d5ea2e",
            "route_table_id": "rtb-0011c27e2776f640c",
            "subnet_id": "subnet-0f025732e68c0b052"
          },
          "dependencies": [
            "aws_internet_gateway.mihai-igw",
            "aws_route_table.mihai-public-rtb",
            "aws_subnet.mihai-public-subnet",
            "aws_vpc.mihai-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:495599754512:security-group/sg-02c58be2d5ebf2e31",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02c58be2d5ebf2e31",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_tls",
            "name_prefix": "",
            "owner_id": "495599754512",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls"
            },
            "tags_all": {
              "Name": "allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-000fd9ffd3a84aa02"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.mihai-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_tls_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:495599754512:security-group/sg-0bb75dc2411196357",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bb75dc2411196357",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "allow_tls_db",
            "name_prefix": "",
            "owner_id": "495599754512",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls_db"
            },
            "tags_all": {
              "Name": "allow_tls_db"
            },
            "timeouts": null,
            "vpc_id": "vpc-000fd9ffd3a84aa02"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.mihai-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mihai-private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:495599754512:subnet/subnet-019045bd29328506e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-019045bd29328506e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495599754512",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-sub3"
            },
            "tags_all": {
              "Name": "private-sub3"
            },
            "vpc_id": "vpc-000fd9ffd3a84aa02"
          },
          "dependencies": [
            "aws_vpc.mihai-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mihai-public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:495599754512:subnet/subnet-08989942319869769",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08989942319869769",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495599754512",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-sub"
            },
            "tags_all": {
              "Name": "public-sub"
            },
            "vpc_id": "vpc-000fd9ffd3a84aa02"
          },
          "dependencies": [
            "aws_vpc.mihai-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:495599754512:subnet/subnet-0f025732e68c0b052",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f025732e68c0b052",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495599754512",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-sub"
            },
            "tags_all": {
              "Name": "public-sub"
            },
            "vpc_id": "vpc-000fd9ffd3a84aa02"
          },
          "dependencies": [
            "aws_vpc.mihai-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "mihai-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:495599754512:vpc/vpc-000fd9ffd3a84aa02",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-042d7b595b1ebf249",
            "default_route_table_id": "rtb-0e7dbb199d34fb7c1",
            "default_security_group_id": "sg-0366c3b983d8d9540",
            "dhcp_options_id": "dopt-0f068983efb6ac003",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-000fd9ffd3a84aa02",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e7dbb199d34fb7c1",
            "owner_id": "495599754512",
            "tags": {
              "Name": "Mihai-VPC"
            },
            "tags_all": {
              "Name": "Mihai-VPC"
            }
          }
        }
      ]
    }
  ]
}